force-app/main/default/objects/SIB_Field_Metadata__c/SIB_Field_Metadata__c.object-meta.xml
<CustomObject>
    <description>Life Chances Fund - Field metadata extracted via Metadata API and updated with custom attributes</description>
    <label>SIB Field Metadata</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SIB Field Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>