force-app/main/default/objects/SIB_Field_Metadata__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Field Description (Guidance)</description>
    <inlineHelpText>Field Description (Guidance)</inlineHelpText>
    <label>Description (Guidance)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>