force-app/main/default/objects/SIB_Field_Metadata__c/fields/Field_Key__c.field-meta.xml
<CustomField>
    <fullName>Field_Key__c</fullName>
    <description>ObjectName.FieldName</description>
    <externalId>true</externalId>
    <inlineHelpText>ObjectName.FieldName</inlineHelpText>
    <label>Field Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>