force-app/main/default/objects/SIB_Field_Metadata__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>Field API Name</description>
    <inlineHelpText>Field API Name</inlineHelpText>
    <label>Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>