force-app/main/default/objects/SIB_Field_Metadata__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <description>Field Help Text (Form Question Label)</description>
    <inlineHelpText>Field Help Text (Form Question Label)</inlineHelpText>
    <label>Help Text (Question Label)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>