force-app/main/default/objects/SIB_Field_Metadata__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>SIB Form Object Name</description>
    <inlineHelpText>SIB Form Object Name</inlineHelpText>
    <label>Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SIB_Object_Name</valueSetName>
    </valueSet>
</CustomField>