force-app/main/default/objects/SIB_Field_Metadata__c/fields/Page_Title__c.field-meta.xml
<CustomField>
    <fullName>Page_Title__c</fullName>
    <description>Title of form page where field appears</description>
    <inlineHelpText>Title of form page where field appears</inlineHelpText>
    <label>Page Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>