force-app/main/default/objects/SIB_Field_Metadata__c/fields/Recommended_Word_Limit__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Word_Limit__c</fullName>
    <description>Recommended word limit for textarea fields</description>
    <inlineHelpText>Recommended word limit for textarea fields</inlineHelpText>
    <label>Recommended Word Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>