force-app/main/default/objects/SIB_Field_Metadata__c/fields/Related_Object_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Field_Name__c</fullName>
    <description>For example, Stakeholder field to populate</description>
    <inlineHelpText>For example, Stakeholder field to populate</inlineHelpText>
    <label>Related Object Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>