force-app/main/default/objects/SIB_Field_Metadata__c/fields/Related_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Name__c</fullName>
    <description>For example, Stakeholder object if this field relates to a Stakeholder</description>
    <inlineHelpText>For example, Stakeholder object if this field relates to a Stakeholder</inlineHelpText>
    <label>Related Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SIB_Object_Name</valueSetName>
    </valueSet>
</CustomField>