force-app/main/default/objects/SIB_Field_Metadata__c/fields/Related_Object_Record_No__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Record_No__c</fullName>
    <description>Groups fields relating to a particular Stakeholder (for example)</description>
    <inlineHelpText>Groups fields relating to a particular Stakeholder (for example)</inlineHelpText>
    <label>Related Object Record No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>