force-app/main/default/objects/SIB_Field_Metadata__c/fields/Related_Object_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Record_Type__c</fullName>
    <description>For example, &#39;Setup&#39; record type in Stakeholder object</description>
    <inlineHelpText>For example, &#39;Setup&#39; record type in Stakeholder object</inlineHelpText>
    <label>Related Object Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>