force-app/main/default/objects/SIB_Field_Metadata__c/fields/Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Name__c</fullName>
    <description>Child Relationship Query Name</description>
    <inlineHelpText>Child Relationship Query Name</inlineHelpText>
    <label>Child Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>