force-app/main/default/objects/SIB_Field_Metadata__c/fields/Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>Rich_Text__c</fullName>
    <description>Form Field Rich Text (additional or an alternative to Guidance)</description>
    <inlineHelpText>Form Field Rich Text (additional or an alternative to Guidance)</inlineHelpText>
    <label>Rich Text (Guidance)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>