force-app/main/default/objects/SIB_Field_Metadata__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Custom field type</description>
    <inlineHelpText>Custom field type</inlineHelpText>
    <label>Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>