force-app/main/default/objects/SIB_Field_Metadata__c/fields/Warning_Text__c.field-meta.xml
<CustomField>
    <fullName>Warning_Text__c</fullName>
    <description>Warning text to trigger email to applicant</description>
    <inlineHelpText>Warning text to trigger email to applicant</inlineHelpText>
    <label>Warning Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>