force-app/main/default/objects/SIB_Field_Metadata__c/fields/Warning_Value__c.field-meta.xml
<CustomField>
    <fullName>Warning_Value__c</fullName>
    <description>Field value that triggers the Warning Text</description>
    <inlineHelpText>Field value that triggers the Warning Text</inlineHelpText>
    <label>Warning Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>