force-app/main/default/objects/SIB_Field_Metadata__c/listViews/EOI.listView-meta.xml
<ListView>
    <fullName>EOI</fullName>
    <columns>NAME</columns>
    <columns>Field_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Length__c</columns>
    <columns>Help_Text__c</columns>
    <columns>Description__c</columns>
    <columns>Relationship_Name__c</columns>
    <columns>Recommended_Word_Limit__c</columns>
    <columns>Rich_Text__c</columns>
    <columns>Warning_Value__c</columns>
    <columns>Warning_Text__c</columns>
    <columns>Page_Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Name__c</field>
        <operation>equals</operation>
        <value>Form_LCF_EOI_1__c</value>
    </filters>
    <label>EOI</label>
</ListView>