force-app/main/default/objects/SIB_Field_Metadata__c/listViews/Grant.listView-meta.xml
<ListView>
    <fullName>Grant</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
    <columns>NAME</columns>
    <columns>Object_Name__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Length__c</columns>
    <columns>Help_Text__c</columns>
    <columns>Description__c</columns>
    <columns>Relationship_Name__c</columns>
    <columns>Recommended_Word_Limit__c</columns>
    <columns>Rich_Text__c</columns>
    <columns>Warning_Value__c</columns>
    <columns>Warning_Text__c</columns>
    <columns>Page_Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Name__c</field>
        <operation>contains</operation>
        <value>Grant</value>
    </filters>
    <filters>
        <field>Object_Name__c</field>
        <operation>contains</operation>
        <value>Achievement</value>
    </filters>
    <filters>
        <field>Object_Name__c</field>
        <operation>contains</operation>
        <value>Trigger</value>
    </filters>
    <filters>
        <field>Object_Name__c</field>
        <operation>contains</operation>
        <value>Metric</value>
    </filters>
    <label>Grant</label>
</ListView>